# baremetal-network-provisioning

./: .coveragerc  .gitreview  .testr.conf  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  openstack-common.conf  requirements.txt  setup.cfg  tox.ini
.testrepository/: 0  times.dbm
baremetal_network_provisioning/: managers.py
baremetal_network_provisioning/bnp_client_ext/: .project  .shell.py.swp  shell.py
baremetal_network_provisioning/bnp_client_ext/v2_0/: client.py
baremetal_network_provisioning/bnpclient/bnp_client_ext/: shell.py  version.py
baremetal_network_provisioning/bnpclient/bnp_client_ext/bnpcredential/: _bnp_credential.py
baremetal_network_provisioning/bnpclient/bnp_client_ext/bnpswitch/: _bnp_switch.py  _bnp_switchport.py
baremetal_network_provisioning/bnpclient/bnp_client_ext/v2_0/: client.py
baremetal_network_provisioning/common/: constants.py  exceptions.py  snmp_client.py  validators.py
baremetal_network_provisioning/db/: bm_nw_provision_db.py  bm_nw_provision_models.py
baremetal_network_provisioning/db/migration/: cli.py
baremetal_network_provisioning/db/migration/alembic_migrations/: env.py
baremetal_network_provisioning/drivers/: discovery_driver.py  discovery_driver_api.py  port_provisioning_driver.py  snmp_client.py  snmp_discovery_driver.py  snmp_driver.py  snmp_provisioning_driver.py
baremetal_network_provisioning/drivers/exensions/: bnp_extension_driver.py
baremetal_network_provisioning/drivers/hp/: hp_snmp_provisioning_driver.py
baremetal_network_provisioning/drivers/snmp/: discovery_driver.py  port_provisioning_api.py  snmp_discovery_driver.py  snmp_provisioning_api.py
baremetal_network_provisioning/ml2/: hp_network_provisioning_driver.py  hpe_ironic_credential_ext_driver.py  hpe_ironic_switch_ports_ext_driver.py  hpeironicextensiondriver.py  hpironicextensiondriver.py  mechanism_hp.py  mechanism_hpe.py  network_provisioning_api.py  plugin.py
baremetal_network_provisioning/ml2/extensions/: bnp_credential.py  bnp_switch.py  bnp_switchport.py  switch.py
baremetal_network_provisioning/tests/unit/bnpclient/: test_cli20.py  test_cli20_bnp_credential_ext.py  test_cli20_bnp_switch_ext.py
baremetal_network_provisioning/tests/unit/common/: test_snmp_client.py
baremetal_network_provisioning/tests/unit/db/: test_bm_nw_provision_db.py
devstack/: README.rst  plugin.sh  settings
doc/source/: conf.py  index.rst  installation.rst  usage.rst
etc/: hp_network_provisioning_conf.ini  ml2_conf_hp.ini
(+13 files in other folders)
