[metadata]
name = baremetal-network-provisioning
version = 2015.2.1
summary = HPE mechanism drivers for bare metal connectivity
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    baremetal_network_provisioning
data_files =
    etc/neutron =
        etc/ml2_conf_hpe.ini
        etc/hp_network_provisioning_conf.ini

[entry_points]
console_scripts =
    neutron-bnp = baremetal_network_provisioning.bnpclient.bnp_client_ext.shell:main
neutron.db.alembic_migrations =
    baremetal-network-provisioning = baremetal_network_provisioning.db.migration:alembic_migrations
neutron.ml2.extension_drivers =
    bnp_ext_driver = baremetal_network_provisioning.ml2.hpeironicextensiondriver:HPEIronicExtensionDriver
    bnp_cred_ext_driver = baremetal_network_provisioning.ml2.hpe_ironic_credential_ext_driver:HPEIronicCredentialExtDriver
bnpclient.extension =
    bnp_switch = baremetal_network_provisioning.bnpclient.bnp_client_ext.bnpswitch._bnp_switch
    bnp_credential = baremetal_network_provisioning.bnpclient.bnp_client_ext.bnpcredential._bnp_credential
bnp.provisioning_driver = 
    hpe_snmp = baremetal_network_provisioning.drivers.snmp_provisioning_driver:SNMPProvisioningDriver

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = baremetal_network_provisioning/locale
domain =  baremetal-network-provisioning

[update_catalog]
domain = baremetal-network-provisioning
output_dir = baremetal_network_provisioning/locale
input_file = baremetal_network_provisioning/locale/baremetal-network-provisioning.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = baremetal_network_provisioning/locale/baremetal-network-provisioning.pot
